--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^7.1.2",
+    "style-loader": "^4.0.0",
     "typescript": "^5.5.3",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
